<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/pane_functions" android:title="@string/pane_functions"
        android:icon="@android:drawable/ic_menu_sort_by_size" />
    <item android:id="@+id/pane_disasm" android:title="@string/pane_disasm"
        android:icon="@android:drawable/ic_menu_agenda" />
    <item android:id="@+id/pane_ir" android:title="@string/pane_ir"
        android:icon="@android:drawable/ic_menu_share" />
    <item android:id="@+id/pane_c" android:title="@string/pane_c"
        android:icon="@android:drawable/ic_menu_edit" />
    <item android:id="@+id/pane_graph" android:title="@string/pane_graph"
        android:icon="@android:drawable/ic_menu_mapmode" />
    <item android:id="@+id/pane_log" android:title="@string/pane_log"
        android:icon="@android:drawable/ic_menu_info_details" />
</menu>
